--- a/app/frontend/assets/manifest.json
+++ b/app/frontend/assets/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "regie.forzamor.nl",
-  "short_name": "regie.forzamor.nl",
+  "name": "Regie",
+  "short_name": "Regie",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
