--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -4,7 +4,7 @@ djangorestframework==3.13.1
 drf-spectacular==0.26.0
 uWSGI==2.0.20
 django-webpack-loader==1.7.0
-requests
+requests==2.29.0
 debugpy
 django-health-check
 django_redis
