--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -1,20 +1,49 @@
-name: Create a Docker image and publish to acceptance
+name: "CI/CD Workflow"
 
 on:
   push:
-    branches: ['develop']
 
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
 
 jobs:
-  apps:
+  django-lint:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Set up Python
+        uses: actions/setup-python@v3.1.2
+        with:
+          python-version: 3.10.10
+      - name: Linting
+        run: bash bin/cleanup_pre_commit.sh
+
+  docker-build-and-test:
+    name: Create Docker image and run tests
+    runs-on: ubuntu-latest
+    needs: django-lint
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - name: Build Docker test image
+        run: |
+          docker-compose -f docker-compose.test.yaml build
+      - name: Create Docker network
+        run: docker network create regie_network
+      - name: Start image and run tests in Docker container
+        run: |
+          docker-compose -f docker-compose.test.yaml up -d
+          docker-compose -f docker-compose.test.yaml exec -T app bash ./deploy/tests.sh
+
+  deploy-acc:
+    if: github.ref == 'refs/heads/develop'
+    needs: docker-build-and-test
     runs-on: ubuntu-latest
     permissions:
       contents: read
       packages: write
-
     steps:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
