--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -28,16 +28,29 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+
       - name: Build Docker test image
         run: |
           docker-compose -f docker-compose.test.yaml build
+
       - name: Create Docker network
         run: docker network create regie_network
-      - name: Start image and run tests in Docker container
+
+      - name: Start Docker Containers
         run: |
           docker-compose -f docker-compose.test.yaml up -d --verbose
-          docker-compose -f docker-compose.test.yaml exec -T app bash ./deploy/tests.sh --verbose
+          if [ $? -ne 0 ]; then
+            echo "Failed to start Docker containers"
+            exit 1
+          fi
 
+      - name: Run Tests
+        run: |
+          docker-compose -f docker-compose.test.yaml exec -T app bash ./deploy/tests.sh --verbose
+          if [ $? -ne 0 ]; then
+            echo "Tests failed"
+            exit 1
+          fi
 
   deploy-acc:
     name: Acceptance release
