--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -30,29 +30,17 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Build Docker test image
-        run: |
-          docker-compose -f docker-compose.test.yaml build
+        run: docker-compose -f docker-compose.test.yaml build
 
       - name: Create Docker network
         run: docker network create regie_network
 
       - name: Start Docker Containers
-        run: |
-          docker-compose -f docker-compose.test.yaml up -d
-          if [ $? -ne 0 ]; then
-            echo "Failed to start Docker containers"
-            exit 1
-          fi
-
+        run: docker-compose -f docker-compose.test.yaml up -d
+      - name: Run Alternate Tests
+        run: docker-compose -f docker-compose.test.yaml run app python manage.py test
       - name: Run Tests
-        run: |
-          docker-compose -f docker-compose.test.yaml exec -T app bash ./deploy/tests.sh
-          if [ $? -ne 0 ]; then
-            echo "Tests failed"
-            exit 1
-          fi
-
-
+        run: docker-compose -f docker-compose.test.yaml exec -T app bash ./deploy/tests.sh
 
   deploy-acc:
     name: Acceptance release
