Create uwsgi.log file in Dockerfile and set correct permissions

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -21,6 +21,11 @@ ENV PYTHONUNBUFFERED 1
 
 WORKDIR /app/
 
+# Create the uWSGI log file and set permissions
+RUN touch /app/uwsgi.log \
+    && chown $APP_USER:$APP_USER /app/uwsgi.log \
+    && chmod 600 /app/uwsgi.log
+
 RUN apt-get update \
     && apt-get dist-upgrade -y \
     && apt-get autoremove -y \
