--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -24,7 +24,7 @@ WORKDIR /app/
 # Create the uWSGI log file and set permissions
 RUN touch /app/uwsgi.log \
     && chown $APP_USER:$APP_USER /app/uwsgi.log \
-    && chmod 600 /app/uwsgi.log
+    && chmod -R 744 /app/uwsgi.log
 
 RUN apt-get update \
     && apt-get dist-upgrade -y \
