--- a/docker-compose.test.yaml
+++ b/docker-compose.test.yaml
@@ -6,8 +6,8 @@ services:
       - "8003:8000"
     env_file:
       - .env.test
-    volumes:
-      - ./app:/app
+    # volumes:
+    #   - ./app:/app
     depends_on:
       database:
         condition: service_healthy
