Added prettier and stylelint to frontend. Added prettier to pre-commit config. Formatted using prettier.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,3 +24,8 @@ repos:
       rev: '6.0.0'
       hooks:
       - id: flake8
+  - repo: https://github.com/prettier/prettier
+    rev: "1.17.1"
+    hooks:
+      - id: prettier
+        files: '\.(js|ts|jsx|tsx|scss|css)$'
