--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -21,7 +21,15 @@
         "webpack-cli": "^4.10.0",
         "webpack-dev-server": "^4.11.1",
         "webpack-notifier": "^1.15.0",
-        "ws": "^8.13.0"
+        "ws": "^8.13.0",
+        "prettier": "2.7.1",
+        "stylelint": "14.14.0",
+        "stylelint-config-idiomatic-css": "1.1.0",
+        "stylelint-config-prettier": "9.0.3",
+        "stylelint-config-recommended-scss": "7.0.0",
+        "stylelint-config-standard": "29.0.0",
+        "stylelint-webpack-plugin": "3.3.0"
+
     },
     "license": "UNLICENSED",
     "private": true,
