--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,8 +24,10 @@ repos:
       rev: '6.0.0'
       hooks:
       - id: flake8
-  - repo: https://github.com/prettier/prettier
-    rev: "1.17.1"
+  - repo: https://github.com/pre-commit/mirrors-prettier
+    rev: "v3.0.3"
     hooks:
       - id: prettier
+        additional_dependencies:
+          - prettier@3.0.3
         files: '\.(js|ts|jsx|tsx|scss|css)$'
