--- a/app/frontend/assets/manifest.json
+++ b/app/frontend/assets/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Regie",
-  "short_name": "Regie",
+  "name": "PlanR",
+  "short_name": "PlanR",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
