--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -33,7 +33,7 @@ jobs:
         run: docker-compose -f docker-compose.test.yaml build
 
       - name: Create Docker network
-        run: docker network create regie_network
+        run: docker network create planr_network
 
       - name: Start Docker Containers
         run: docker-compose -f docker-compose.test.yaml up -d
