--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,13 +1,13 @@
 version: '3'
 services:
   gateway:
-    container_name: regie.mor.local
+    container_name: planr.mor.local
     build: ./nginx
     volumes:
       - ./nginx/nginx-default.development.conf:/etc/nginx/conf.d/default.conf
       - ./media:/media
     depends_on:
-      regie_app:
+      planr_app:
         condition: service_started
     ports:
       - 8003:8003
@@ -15,7 +15,7 @@ services:
       mor_bridge_network:
     env_file:
       - .env.local
-  regie_app:
+  planr_app:
     build: ./app
     env_file:
       - .env.local
@@ -28,14 +28,14 @@ services:
       database:
         condition: service_started
     networks:
-      - regie_network
+      - planr_network
       - mor_bridge_network
     command: ["bash", "/app/deploy/docker-entrypoint.development.sh"]
 
   redis:
     image: redis
     networks:
-      - regie_network
+      - planr_network
     ports:
       - "6379"
 
@@ -49,13 +49,13 @@ services:
     volumes:
       - postgres-data:/var/lib/postgresql/data
     networks:
-      - regie_network
+      - planr_network
 
 volumes:
   postgres-data:
 
 networks:
-  regie_network:
+  planr_network:
     external: true
   mor_bridge_network:
     external: true
