--- a/dex.dev.yml
+++ b/dex.dev.yml
@@ -9,12 +9,12 @@ web:
   http: 0.0.0.0:5556
 
 staticClients:
-- id: mor-regie
+- id: mor-planr
   redirectURIs:
     - http://localhost:8005/oidc/callback/
     - http://127.0.0.1:8005/oidc/callback/
-    - http://regie.mor.local:8003/oidc/callback/
-  name: Regie
+    - http://planr.mor.local:8003/oidc/callback/
+  name: PlanR
   secret: insecure
 
 enablePasswordDB: true
