--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -31,6 +31,7 @@ services:
       - planr_network
       - mor_bridge_network
     command: ["bash", "/app/deploy/docker-entrypoint.development.sh"]
+    restart: always
 
   redis:
     image: redis
