--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -67,7 +67,7 @@ jobs:
         id: meta_app
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-app-develop
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-app
 
       - name: Build and push app Docker image
         uses: docker/build-push-action@v3
