--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -23,10 +23,8 @@ services:
       - ./media:/media
       - ./app:/app
     depends_on:
-      redis:
-        condition: service_started
-      database:
-        condition: service_started
+      - redis
+      - database
     networks:
       - planr_network
       - mor_bridge_network
