--- a/docker-compose.test.yaml
+++ b/docker-compose.test.yaml
@@ -7,8 +7,7 @@ services:
     env_file:
       - .env.test
     depends_on:
-      database:
-        condition: service_healthy
+      - database
     networks:
       - planr_network
 
