--- a/docker-compose.test.yaml
+++ b/docker-compose.test.yaml
@@ -7,8 +7,10 @@ services:
     env_file:
       - .env.test
     depends_on:
-      - database
-      - redis
+      database:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
     networks:
       - planr_network
 
