--- a/docker-compose.test.yaml
+++ b/docker-compose.test.yaml
@@ -10,7 +10,7 @@ services:
       database:
         condition: service_healthy
       redis:
-        condition: service_healthy
+        condition: service_started
     networks:
       - planr_network
 
