--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -52,8 +52,30 @@ services:
     networks:
       - planr_network
 
+  mercure:
+    image: dunglas/mercure
+    restart: unless-stopped
+    environment:
+      MERCURE_EXTRA_DIRECTIVES: |
+          cors_origins "http://planr.mor.local:8003"
+          anonymous
+      SERVER_NAME: ':80'
+    command: /usr/bin/caddy run --config /etc/caddy/Caddyfile.dev
+    env_file:
+      - .env.local
+    ports:
+      - '7002:80'
+      - '443'
+    networks:
+      - planr_network
+    volumes:
+      - mercure_data:/data
+      - mercure_config:/config
+
 volumes:
   postgres-data:
+  mercure_data:
+  mercure_config:
 
 networks:
   planr_network:
