melding ingebruik: celery publisher

--- a/.env
+++ b/.env
@@ -25,3 +25,8 @@ MELDINGEN_PASSWORD=insecure
 
 DJANGO_USER_CORE_USERNAME=core_username
 DJANGO_USER_CORE_PASSWORD=insecure
+
+MERCURE_PUBLISHER_JWT_KEY=!ChangeThisMercureHubJWTSecretKey!
+MERCURE_SUBSCRIBER_JWT_KEY=!ChangeThisMercureHubJWTSecretKey!
+APP_MERCURE_PUBLIC_URL=http://localhost:7002/.well-known/mercure
+APP_MERCURE_INTERNAL_URL=http://mercure/.well-known/mercure
