--- a/.github/workflows/deploy-test.yaml
+++ b/.github/workflows/deploy-test.yaml
@@ -11,6 +11,7 @@ env:
 jobs:
   apps:
     runs-on: ubuntu-latest
+    environment: test
     permissions:
       contents: read
       packages: write
