--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -6,7 +6,7 @@ uWSGI==2.0.22
 django-webpack-loader==1.7.0
 requests==2.29.0
 debugpy
-django-health-check
+django-health-check==3.17.0
 django_redis
 django-permissions-policy==4.14.0
 django-cors-headers==3.13.0
