--- a/.env
+++ b/.env
@@ -30,3 +30,5 @@ MERCURE_PUBLISHER_JWT_KEY=!ChangeThisMercureHubJWTSecretKey!
 MERCURE_SUBSCRIBER_JWT_KEY=!ChangeThisMercureHubJWTSecretKey!
 APP_MERCURE_PUBLIC_URL=http://localhost:7002/.well-known/mercure
 APP_MERCURE_INTERNAL_URL=http://mercure/.well-known/mercure
+
+EMAIL_BEHEER=ForzaMOR@rotterdam.nl
