--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -10,6 +10,7 @@ django-health-check==3.17.0
 django_redis
 django-permissions-policy==4.14.0
 django-cors-headers==3.13.0
+django-ckeditor
 django-csp==3.6
 weasyprint==52.5
 psycopg2-binary==2.9.5
@@ -21,3 +22,6 @@ celery==5.2.6
 django-celery-beat==2.2.1
 django-celery-results==2.4.0
 django-select2==8.1.2
+Pillow==9.4.0
+pillow-heif==0.13.0
+sorl-thumbnail==12.8.0
