--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -26,7 +26,7 @@ services:
       redis:
         condition: service_started
       database:
-        condition: service_started
+        condition: service_healthy
     networks:
       - planr_network
       - mor_bridge_network
@@ -49,6 +49,11 @@ services:
       - .env.local
     volumes:
       - postgres-data:/var/lib/postgresql/data
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -d $${POSTGRES_DB} -U $${POSTGRES_USER}" ]
+      interval: 5s
+      timeout: 5s
+      retries: 5
     networks:
       - planr_network
 
