--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -21,7 +21,7 @@ jobs:
       - name: Linting
         run: bash bin/cleanup_pre_commit.sh
 
-  docker-build-and-test:
+  docker-build-and-testing:
     name: Create Docker image and test
     runs-on: ubuntu-latest
     needs: django-lint
@@ -41,22 +41,15 @@ jobs:
       - name: Run Tests
         run: docker compose -f docker-compose.test.yaml run app python manage.py test
 
-  deploy-acc:
-    name: Acceptance release
-    if: github.ref == 'refs/heads/develop'
-    needs: docker-build-and-test
+  build-and-push-docker-image:
+    name: Build and push app Docker image
     runs-on: ubuntu-latest
-    environment: acc
-    permissions:
-      contents: read
-      packages: write
+    needs: docker-build-and-testing
     steps:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
-
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-
       - name: Log in to the Container registry
         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
         with:
@@ -80,6 +73,16 @@ jobs:
           build-args: |
             GIT_SHA=${{ github.sha }}
 
+  deploy-acc:
+    name: Acceptance release
+    if: github.ref == 'refs/heads/develop'
+    needs: build-and-push-docker-image
+    runs-on: ubuntu-latest
+    environment: acc
+    permissions:
+      contents: read
+      packages: write
+    steps:
       - name: Start rollout on k8s platform
         uses: actions-hub/kubectl@master
         env:
@@ -101,42 +104,13 @@ jobs:
   deploy-test:
     name: Test release
     if: github.ref == 'refs/heads/develop'
-    needs: docker-build-and-test
+    needs: build-and-push-docker-image
     runs-on: ubuntu-latest
     environment: test
     permissions:
       contents: read
       packages: write
     steps:
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Log in to the Container registry
-        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta_app
-        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
-        with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-app
-
-      - name: Build and push app Docker image
-        uses: docker/build-push-action@v3
-        with:
-          context: "{{defaultContext}}:app"
-          push: true
-          tags: ${{ steps.meta_app.outputs.tags }}
-          labels: ${{ steps.meta_app.outputs.labels }}
-          build-args: |
-            GIT_SHA=${{ github.sha }}
-
       - name: Start rollout on k8s platform
         uses: actions-hub/kubectl@master
         env:
