--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -14,6 +14,7 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+
       - name: Set up Python
         uses: actions/setup-python@v3.1.2
         with:
@@ -21,8 +22,8 @@ jobs:
       - name: Linting
         run: bash bin/cleanup_pre_commit.sh
 
-  docker-build-and-testing:
-    name: Create Docker image and test
+  create-docker-test-image-and-test:
+    name: Create Docker test image and testing
     runs-on: ubuntu-latest
     needs: django-lint
     steps:
@@ -42,14 +43,16 @@ jobs:
         run: docker compose -f docker-compose.test.yaml run app python manage.py test
 
   build-and-push-docker-image:
-    name: Build and push app Docker image
+    name: Build and push Docker image
     runs-on: ubuntu-latest
-    needs: docker-build-and-testing
+    needs: create-docker-test-image-and-test
     steps:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+
       - name: Log in to the Container registry
         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
         with:
