auto test release: try manual tags

--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -72,9 +72,7 @@ jobs:
         with:
           context: "{{defaultContext}}:app"
           push: true
-          tags: |
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-app:develop
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-app:test
+          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-app:develop, ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-app:test
           labels: ${{ steps.meta_app.outputs.labels }}
           build-args: |
             GIT_SHA=${{ github.sha }}
