--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -66,13 +66,15 @@ jobs:
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-app
-
+          tags: |
+            type=raw,develop
+            type=raw,test
       - name: Build and push app Docker image
         uses: docker/build-push-action@v3
         with:
           context: "{{defaultContext}}:app"
           push: true
-          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-app:develop, ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-app:test
+          tags: ${{ steps.meta_app.outputs.tags }}
           labels: ${{ steps.meta_app.outputs.labels }}
           build-args: |
             GIT_SHA=${{ github.sha }}
