Expose uwsgi stats interface

--- a/app/deploy/config.ini
+++ b/app/deploy/config.ini
@@ -9,6 +9,7 @@ http = 0.0.0.0:8000
 uid = appuser
 gid = appuser
 
+stats = 0.0.0.0:9191                ; Expose stats interface
 strict = true
 master = true
 enable-threads = true
