Disable max-requests-delta because it requires higher version of uwsgi 2.1 beta.

--- a/app/deploy/config.ini
+++ b/app/deploy/config.ini
@@ -28,7 +28,7 @@ processes = 2                           ; Number of Python processes
 threads = 2                             ; Number of threads per process (may increase to 4 later)
 
 max-requests = 500                      ; Restart workers after this many requests
-max-requests-delta = 10                 ; Number of requests to spread the reloads
+; max-requests-delta = 10                 ; Number of requests to spread the reloads, possibly requires uwsgi 2.1 beta
 max-worker-lifetime = 3600              ; Restart workers after this many seconds
 
 ; reload-on-rss and reload-on-as options are not used, hopefully not needed because we have sufficient resources, 256/2=>128 + some extra
