--- a/app/deploy/config.ini
+++ b/app/deploy/config.ini
@@ -14,6 +14,7 @@ uid = appuser
 gid = appuser
 
 stats = 0.0.0.0:9191                    ; Expose stats interface
+stats-http = true                       ; Prefix stats server json output with http headers
 memory-report = true                    ; Enable memory usage reporting.
 
 ; optimize = 1                            ; Python optimization level
