ci-cd with nginx

--- a/nginx/nginx-default.development.conf
+++ b/nginx/nginx-default.development.conf
@@ -16,16 +16,16 @@ server {
         proxy_pass http://planr_app:8000;
     }
 
-    location /media-protected {
-        internal;
-        alias /media/;
+    location /static {
+        proxy_pass http://planr_app:8000/static;
         access_log off;
         expires 30d;
         add_header Vary Accept-Encoding;
+        add_header Access-Control-Allow-Origin *;
     }
 
-    location /static {
-        proxy_pass http://planr_app:8000/static;
+    location /media {
+        proxy_pass http://planr_app:8000/media;
         access_log off;
         expires 30d;
         add_header Vary Accept-Encoding;
