--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -36,7 +36,7 @@ repos:
     hooks:
       - id: djlint-reformat-django
       - id: djlint-django
-        args: ["--ignore", "H006,H013,H023,D004,D018"]
+        args: ["--ignore", "H006,H013,H021,H023,D004,D018"]
   - repo: https://github.com/pre-commit/mirrors-eslint
     rev: 'v8.56.0'
     hooks:
