--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -59,6 +59,7 @@ RUN apt-get update \
         libmagic1 \
         libcairo2 \
         libpango1.0-0 \
+        libpq-dev \
         gcc \
         graphviz \
         graphviz-dev \
