--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -13,7 +13,7 @@ django-cors-headers==3.13.0
 django-ckeditor
 django-csp==3.6
 weasyprint==52.5
-psycopg2-binary==2.9.5
+psycopg2>=2.9.5
 mozilla-django-oidc==3.0.0
 PyJWT<2.4.0
 django-session-timeout-joinup==1.0.0
