--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -31,3 +31,4 @@ opentelemetry-distro
 opentelemetry-exporter-otlp
 django-debug-toolbar==4.0.0
 django-encrypted-model-fields==0.6.5
+isoweek==1.3.3
