#MOR-13: anti cache headers

--- a/nginx/nginx-default.development.conf
+++ b/nginx/nginx-default.development.conf
@@ -14,6 +14,9 @@ server {
 
     location / {
         proxy_pass http://planr_app:8000;
+        expires 0;
+        add_header Cache-Control "no-cache, no-store";
+        add_header Pragma no-cache;
     }
 
     location /static {
@@ -27,9 +30,11 @@ server {
     location /media {
         proxy_pass http://planr_app:8000/media;
         access_log off;
-        expires 30d;
         add_header Vary Accept-Encoding;
         add_header Access-Control-Allow-Origin *;
+        expires 0;
+        add_header Cache-Control "no-cache, no-store";
+        add_header Pragma no-cache;
     }
 
     location /stats {
