refactor login logout flow

--- a/.env
+++ b/.env
@@ -18,6 +18,7 @@ DATABASE_PORT_OVERRIDE=5432
 DJANGO_SUPERUSER_USERNAME=admin
 DJANGO_SUPERUSER_EMAIL=admin@admin.com
 DJANGO_SUPERUSER_PASSWORD=insecure
+DJANGO_ADMIN_LOGIN_ENABLED=True
 
 MERCURE_PUBLISHER_JWT_KEY=!ChangeThisMercureHubJWTSecretKey!
 MERCURE_SUBSCRIBER_JWT_KEY=!ChangeThisMercureHubJWTSecretKey!
