--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -34,3 +34,5 @@ django-encrypted-model-fields==0.6.5
 isoweek==1.3.3
 beautifulsoup4==4.12.3
 git+https://github.com/forza-mor-rotterdam/mor-api-services.git@780c9608968cfbe9307fe453f2844ddcf1397b9b
+opentelemetry.instrumentation.wsgi
+opentelemetry.instrumentation.django
