mor-513: fix unittests

--- a/docker-compose.test.yaml
+++ b/docker-compose.test.yaml
@@ -13,6 +13,8 @@ services:
         condition: service_started
     networks:
       - planr_network
+    volumes:
+      - ./app:/app
 
   redis:
     image: redis
