Enable Nginx status

--- a/nginx/nginx-default.conf
+++ b/nginx/nginx-default.conf
@@ -42,6 +42,12 @@ server {
         add_header Access-Control-Allow-Origin *;
     }
 
+    location = /nginx_status {
+        allow 127.0.0.1;
+        deny all;
+        stub_status;
+    }
+
     location /stats {
         proxy_pass http://localhost:9191;
     }
