--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,17 +1,17 @@
-Django==4.2.15
-django-filter==22.1
-djangorestframework==3.15.1
-drf-spectacular==0.26.0
+Django==5.2.10
+django-filter==25.2
+djangorestframework==3.16.1
+drf-spectacular==0.29.0
 uWSGI==2.0.25.1
 django-webpack-loader==1.7.0
-requests==2.29.0
+requests==2.32.5
 debugpy
-django-health-check==3.17.0
+django-health-check==3.20.0
 django_redis==5.4.0
 django-permissions-policy==4.14.0
-django-cors-headers==3.13.0
+django-cors-headers==4.9.0
 django-ckeditor-5==0.2.13
-django-csp==3.6
+django-csp==4.0
 weasyprint==52.5
 psycopg2>=2.9.5
 mozilla-django-oidc==3.0.0
@@ -24,12 +24,12 @@ django-celery-results==2.6.0
 django-select2==8.1.2
 Pillow==9.4.0
 pillow-heif==0.13.0
-sorl-thumbnail==12.8.0
+sorl-thumbnail==12.11.0
 chardet==5.2.0
 requests_mock==1.11.0
 opentelemetry-distro
 opentelemetry-exporter-otlp
-django-debug-toolbar==4.0.0
+django-debug-toolbar==6.0.0
 django-encrypted-model-fields==0.6.5
 isoweek==1.3.3
 beautifulsoup4==4.12.3
@@ -38,3 +38,4 @@ opentelemetry.instrumentation.wsgi
 opentelemetry.instrumentation.django
 lxml
 pika==1.3.2
+ua-parser[regex]
