local dev init, readme

--- a/.env
+++ b/.env
@@ -1,9 +1,6 @@
 ENVIRONMENT=development
-APP_ENV=productie
 
 DJANGO_SECRET_KEY=secret_key
-
-DEV_SOCKET_PORT=9003
 
 POSTGRES_DB=project
 POSTGRES_USER=user
@@ -15,12 +12,13 @@ DATABASE_PASSWORD=insecure
 DATABASE_HOST_OVERRIDE=database
 DATABASE_PORT_OVERRIDE=5432
 
-DJANGO_SUPERUSER_USERNAME=admin
-DJANGO_SUPERUSER_EMAIL=admin@admin.com
-DJANGO_SUPERUSER_PASSWORD=insecure
 ENABLE_DJANGO_ADMIN_LOGIN=True
+
+DEFAULT_BOT_USER_EMAIL=botjeknor@rotterdam.nl
 
 MERCURE_PUBLISHER_JWT_KEY=!ChangeThisMercureHubJWTSecretKey!
 MERCURE_SUBSCRIBER_JWT_KEY=!ChangeThisMercureHubJWTSecretKey!
 APP_MERCURE_PUBLIC_URL=http://localhost:7002/.well-known/mercure
 APP_MERCURE_INTERNAL_URL=http://mercure/.well-known/mercure
+
+SHOW_DEBUG_TOOLBAR=True
