--- a/.env.test
+++ b/.env.test
@@ -8,7 +8,7 @@ POSTGRES_USER=user
 POSTGRES_PASSWORD=insecure
 
 DJANGO_SUPERUSER_USERNAME=admin
-DJANGO_SUPERUSER_EMAIL=admin@admin.com
+DJANGO_SUPERUSER_EMAIL=admin@forzamor.nl
 DJANGO_SUPERUSER_PASSWORD=insecure
 
 DATABASE_NAME=project
